fixed {bz: 2312}.
IE7 has some extra padding around the button, need to specify height to eliminate those padding.

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -594,6 +594,7 @@ li.flexButton:hover {
 }
 
 li.flexButtonBlue {
+	height: 22px;
 	background: url(../images/flexButtonBlue.png) no-repeat;
 	background-position: bottom right;
         white-space: nowrap;
